# st_petersburg_paradox

./: .gitignore  .gitmodules  CMakeLists.txt
docs/: README.md
include/: st_petersburg_paradox.hpp
src/: st_petersburg_paradox.cpp
